--- a/front/src/style/App.scss
+++ b/front/src/style/App.scss
@@ -1,9 +1,22 @@
 .container {
+  margin-top: 80px;
   text-align: center;
 }
 
-.header {
-  margin-top: 30px;
+header {
+  background-color: rgba(112, 128, 130, 0.8);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  h1 {
+    color: rgb(2, 28, 23);
+    margin: 0;
+    padding: 5px;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 30px;
+    text-align: center;
+  }
 }
 
 .main__btn {
@@ -13,10 +26,19 @@
 .main__card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-top: 30px;
+  background-color: #fafafa;
 }
 
 .main__card__inner-first {
   margin: 10px 0 25px;
+}
+
+.is-checked {
+  text-decoration: line-through;
+}
+
+.is-not-checked {
+  text-decoration: none;
 }
 
 .main__card__inner-second {
