--- a/front/src/style/App.scss
+++ b/front/src/style/App.scss
@@ -1,3 +1,5 @@
+$bgcolor: rgba(26, 55, 229, 0.06);
+
 .container {
   margin-top: 80px;
   text-align: center;
@@ -13,7 +15,7 @@ header {
     color: rgb(2, 28, 23);
     margin: 0;
     padding: 5px;
-    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: 'Courier New', Courier, sans-serif;
     font-size: 30px;
     text-align: center;
   }
@@ -44,6 +46,11 @@ header {
 .main__card__inner-second {
   .btn-icon {
     border-radius: 50%;
+  }
+  .btn-icon:hover {
+    background-color: $bgcolor;
+    transition: all 0.3s;
+    opacity: 0.5;
   }
   span {
     margin-left: 1em;
